--- a/deck-of-cards/cards-axios.html
+++ b/deck-of-cards/cards-axios.html
@@ -13,7 +13,7 @@
   <button id="button" class="btn btn-primary"> Get A Card! </button>
   <button id="restart" class="btn btn-success invisible"> Get a New Deck! </button>
 
-  <div id="cards"></div>
+  <div id="cards" class="img-responsive" position="relative"></div>
 </div>
 
   <!-- <script src="https://unpkg.com/popper"></script> -->
